--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,19 @@ local.properties
 .settings/
 .loadpath
 
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+qt/*.so
+qt/*.o
+qt/qt
+
 # External tool builders
 .externalToolBuilders/
 
